[package]
name = "reth-revm"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/paradigmxyz/reth"
description = "reth specific revm utilities"

[dependencies]
# reth 
reth-primitives = { path = "../primitives" }
reth-interfaces = { path = "../interfaces" }
reth-provider = { path = "../storage/provider" }
reth-revm-primitives = { path = "./revm-primitives" }
reth-revm-inspectors = { path = "./revm-inspectors" }
reth-rpc-types = { path = "../rpc/rpc-types", optional = true }

revm = { version = "3.0.0" }

[features]
# provides helpers commonly used in rpc
rpc = ["reth-rpc-types"]